Style: Fixed About Me Gap Better

--- a/css/styles.css
+++ b/css/styles.css
@@ -287,9 +287,7 @@ section {
 .proyects {
     margin: 0rem auto;
 }
-.fix-border-gap{
-    margin-bottom: 5.5rem;
-}
+
 .about-me {
     margin: 0rem auto;
    
